[add] web font Noto sans.

--- a/src/css/foundation/_variables.scss
+++ b/src/css/foundation/_variables.scss
@@ -13,7 +13,7 @@ $color-text-black: #222;
 //     url('/font/xxx.woff') format('woff');
 // }
 
-$font-ja: "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+$font-ja: "Noto Sans", "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
 
 $max-width: 1600px;
 $min-width: 970px;
