--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-// @import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,700");
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,700");
 
 // ==========================================================================
 // Foundation
