--- a/src/html/_layout/_head.pug
+++ b/src/html/_layout/_head.pug
@@ -9,20 +9,20 @@ meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=
 meta(name="description", content=page.description)
 meta(name="keywords", content=keywordsMerge)
 meta(name="theme-color", content=data.meta.themeColor)
-meta(name="msapplication-TileImage", content="/img/common/ms_tileimage.png")
+meta(name="msapplication-TileImage", content=data.meta.path + "/img/common/ms_tileimage.png")
 meta(name="msapplication-TileColor", content=data.meta.themeColor)
-link(rel="shortcut icon" href="/img/common/icon.ico")
-link(rel="apple-touch-icon" sizes="180x180" href="/img/common/app_icon.png")
-link(rel="stylesheet" href="/css/main.css")
+link(rel="icon" href=data.meta.path + "/img/common/icon.ico")
+link(rel="apple-touch-icon" sizes="180x180" href=data.meta.path + "/img/common/app_icon.png")
+link(rel="stylesheet" href=data.meta.path + "/css/main.css")
 
 meta(property="og:title", content=titleMerge)
 meta(property="og:site_name", content=data.meta.websiteName)
 meta(property="og:type", content="website")
 meta(property="og:description", content=page.description)
-meta(property="og:url", content=data.meta.domain + page.path)
-meta(property="og:image", content=data.meta.domain + '/img/common/' + page.ogpImg)
+meta(property="og:url", content=data.meta.domain + data.meta.path + page.path)
+meta(property="og:image", content=data.meta.domain + data.meta.path + '/img/common/' + page.ogpImg)
 
 meta(name="twitter:card", content="summary_large_image")
 meta(name="twitter:title", content=titleMerge)
 meta(name="twitter:description", content=page.description)
-meta(name="twitter:image", content=data.meta.domain + '/img/common/' + page.ogpImg)
+meta(name="twitter:image", content=data.meta.domain + data.meta.path + '/img/common/' + page.ogpImg)
