--- a/src/css/foundation/_global.scss
+++ b/src/css/foundation/_global.scss
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: 'palt';
+  letter-spacing: 0.08em;
 }
 img {
   vertical-align: top;
