[add] new project object that is named global-head.

--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -9,9 +9,16 @@ html(lang="ja")
     include ./_head.pug
   body
     .l-page(data-page-id=page.id)
+      .p-global-head
+        a(
+          href = `${data.meta.path}/`
+          )
+          |Pjax
       block contentFixedBefore
       .l-contents
-        block contentStatic
+        .js-pjax-contents
+          block contentStatic
+      .l-dummy-scroll
       block contentFixedAfter
       include ./_gf.pug
     block script
