--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -36,7 +36,7 @@
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
-// @import "object/project/_xxx";
+@import "object/project/_global-head";
 
 // -----------------------------------------------------------------
 // Utility
