--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,6 +22,7 @@
 // Layout
 // ==========================================================================
 @import "layout/_contents";
+@import "layout/_dummy-scroll";
 @import "layout/_gf";
 @import "layout/_page";
 
