[add] a new project object that is named index-header.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -38,6 +38,7 @@
 // Project
 // -----------------------------------------------------------------
 @import "object/project/_global-head";
+@import "object/project/_index-header";
 
 // -----------------------------------------------------------------
 // Utility
