[add] sections in content.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -32,7 +32,8 @@
 // -----------------------------------------------------------------
 // Component
 // -----------------------------------------------------------------
-// @import "object/component/_xxx";
+@import "object/component/_section-header";
+@import "object/component/_section";
 
 // -----------------------------------------------------------------
 // Project
