--- a/src/css/object/component/_section-header.scss
+++ b/src/css/object/component/_section-header.scss
@@ -3,4 +3,7 @@
   margin-bottom: 0.5em;
   @include fontSizeAll(36, 28, 21);
   font-weight: 400;
+  @include l-more-than-mobile {
+    text-align: center;
+  }
 }
