[add] background color to body element.

--- a/src/css/foundation/_global.scss
+++ b/src/css/foundation/_global.scss
@@ -9,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-feature-settings: 'palt';
   letter-spacing: 0.08em;
+  background-color: #111;
 }
 img {
   vertical-align: top;
