--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -40,6 +40,7 @@
 // Project
 // -----------------------------------------------------------------
 @import "object/project/_index-header";
+@import "object/project/_lower-header";
 
 // -----------------------------------------------------------------
 // Utility
