[add] styles for overlay.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,6 +39,7 @@
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
+@import "object/project/_contents-overlay";
 @import "object/project/_index-header";
 @import "object/project/_lower-header";
 
