--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -13,6 +13,7 @@ html(lang="ja")
       .l-contents
         .js-pjax-contents
           block contentStatic
+      .p-contents-overlay.js-pjax-overlay
       .l-dummy-scroll
       block contentFixedAfter
       include ./_gf.pug
