[modify] scss object  dummy-scroll replaced from layout to project.

--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -15,7 +15,7 @@ html(lang="ja")
         .js-pjax-contents
           block contentStatic
       .p-contents-overlay.js-pjax-overlay
-      .l-dummy-scroll
+      .p-dummy-scroll.js-dummy-scroll
       .js-pjax-fixed-after
         block contentFixedAfter
       include ./_gf.pug
