--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,7 +22,6 @@
 // Layout
 // ==========================================================================
 @import "layout/_contents";
-@import "layout/_dummy-scroll";
 @import "layout/_gf";
 @import "layout/_page";
 
@@ -40,6 +39,7 @@
 // Project
 // -----------------------------------------------------------------
 @import "object/project/_contents-overlay";
+@import "object/project/_dummy-scroll";
 @import "object/project/_index-header";
 @import "object/project/_lower-header";
 
