--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -42,6 +42,7 @@
 @import "object/project/_dummy-scroll";
 @import "object/project/_index-header";
 @import "object/project/_lower-header";
+@import "object/project/_progress";
 
 // -----------------------------------------------------------------
 // Utility
