--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -15,6 +15,8 @@ html(lang="ja")
         .js-pjax-contents
           block contentStatic
       .p-contents-overlay.js-pjax-overlay
+      .p-progress.js-pjax-progress
+        .p-progress__marker
       .p-dummy-scroll.js-dummy-scroll
       .js-pjax-fixed-after
         block contentFixedAfter
