--- a/src/css/object/project/_contents-overlay.scss
+++ b/src/css/object/project/_contents-overlay.scss
@@ -12,11 +12,11 @@
   &.is-expand {
     transform-origin: left;
     transform: scaleX(1);
-    transition-timing-function: $easeInOutCubic;
+    transition-timing-function: $easeOutCubic;
   }
   &.is-shrink {
     transform-origin: right;
     transform: scaleX(0);
-    transition-timing-function: $easeInOutCubic;
+    transition-timing-function: $easeInCubic;
   }
 }
