--- a/src/css/object/project/_progress.scss
+++ b/src/css/object/project/_progress.scss
@@ -18,23 +18,38 @@
   &__marker {
     width: 40px;
     height: 40px;
-    border: 2px solid #fff;
-    animation-name: animateProgress;
-    animation-duration: 0.6s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    &:after {
+      width: 40px;
+      height: 40px;
+      content: '';
+      display: block;
+      border: 2px solid #fff;
+      animation-name: animateProgress;
+      animation-duration: 0.6s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
   }
   //
   // Interaction
   //
   &__marker {
     opacity: 0;
+    transform: translateX(-60px) scale(0.5);
     transition-duration: 0.2s;
   }
   &.is-shown & {
     &__marker {
       opacity: 1;
-      transition-delay: 0.2s;
+      transform: translateX(0) scale(1);
+      transition-timing-function: $easeOutCubic;
+    }
+  }
+  &.is-hidden & {
+    &__marker {
+      opacity: 0;
+      transform: translateX(60px) scale(0.5);
+      transition-timing-function: $easeInCubic;
     }
   }
 }
