[add] onLoad method that is used page loaded at first into Pjax class.

--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -14,7 +14,7 @@ html(lang="ja")
       .l-contents
         .js-pjax-contents
           block contentStatic
-      .p-contents-overlay.js-pjax-overlay
+      .p-contents-overlay.js-pjax-overlay.is-expand
       .p-progress.js-pjax-progress
         .p-progress__marker
       .p-dummy-scroll.js-dummy-scroll
