[add] background image.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -38,6 +38,7 @@
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
+@import "object/project/_background-image";
 @import "object/project/_contents-overlay";
 @import "object/project/_dummy-scroll";
 @import "object/project/_index-header";
