--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -70,3 +70,4 @@ block contentStatic
           span.c-button-border__line-h
 
 block contentFixedAfter
+  .p-background-image.p-background-image--00.js-background
