--- a/src/html/page01.pug
+++ b/src/html/page01.pug
@@ -30,3 +30,4 @@ block contentStatic
         span.c-button-border__line-h
 
 block contentFixedAfter
+  .p-background-image.p-background-image--01.js-background
