[modify] script path.

--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -22,4 +22,4 @@ html(lang="ja")
         block contentFixedAfter
       include ./_gf.pug
     block script
-    script(src="/js/main.js")
+    script(src="/pjax/js/main.js")
