[modify] replace image files.

--- a/src/css/object/project/_background-image.scss
+++ b/src/css/object/project/_background-image.scss
@@ -2,10 +2,10 @@
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
   background-size: cover;
-  &--00 { background-image: url('../img/bg00.jpg'); }
-  &--01 { background-image: url('../img/bg01.jpg'); }
-  &--02 { background-image: url('../img/bg02.jpg'); }
-  &--03 { background-image: url('../img/bg03.jpg'); }
+  &--00 { background-image: url('../img/index/bg.jpg'); }
+  &--01 { background-image: url('../img/page01/bg.jpg'); }
+  &--02 { background-image: url('../img/page02/bg.jpg'); }
+  &--03 { background-image: url('../img/page03/bg.jpg'); }
   &:after {
     content: '';
     display: block;
