[edit] meta description.

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -12,7 +12,7 @@ block contentStatic
       h1.p-index-header__title
         |Pjax
       p.p-index-header__excerpt.js-parallax-1
-        |it is utility class for asynchronous transition.
+        |it is utility class that manage asynchronous transition on website.
       .p-index-header__btn.js-parallax-2
         a.c-button-border.c-button-border--white.js-scroll-item.js-hover(
           href = 'https://github.com/ykob/pjax',
