--- a/src/html/page03.pug
+++ b/src/html/page03.pug
@@ -12,7 +12,7 @@ block contentStatic
       h1.p-lower-header__title
         |Page 03
       p.p-lower-header__excerpt.js-parallax-1
-        |it is utility class for asynchronous transition.
+        |it is utility class that manage asynchronous transition on website.
 
   .l-contents__in.l-contents__in--lower
     .c-section
