--- a/src/css/object/project/_background-image.scss
+++ b/src/css/object/project/_background-image.scss
@@ -1,6 +1,7 @@
 .p-background-image {
+  height: 100vh;
   position: fixed;
-  top: 0; right: 0; bottom: 0; left: 0;
+  top: 0; right: 0; left: 0;
   background-size: cover;
   &--00 { background-image: url('../img/index/bg.jpg'); }
   &--01 { background-image: url('../img/page01/bg.jpg'); }
