--- a/src/css/object/project/_progress.scss
+++ b/src/css/object/project/_progress.scss
@@ -16,11 +16,15 @@
   z-index: 1000;
   pointer-events: none;
   &__marker {
-    width: 40px;
-    height: 40px;
-    &:after {
+    @include l-more-than-mobile {
       width: 40px;
       height: 40px;
+    }
+    @include l-mobile {
+      width: 24px;
+      height: 24px;
+    }
+    &:after {
       content: '';
       display: block;
       border: 2px solid #fff;
@@ -28,6 +32,14 @@
       animation-duration: 0.6s;
       animation-iteration-count: infinite;
       animation-timing-function: linear;
+      @include l-more-than-mobile {
+        width: 40px;
+        height: 40px;
+      }
+      @include l-mobile {
+        width: 24px;
+        height: 24px;
+      }
     }
   }
   //
