[add] constant for page element.

--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -8,7 +8,7 @@ html(lang="ja")
   head
     include ./_head.pug
   body
-    .l-page(data-page-id=page.id)
+    .l-page.js-pjax-page(data-page-id=page.id)
       .js-pjax-fixed-before
         block contentFixedBefore
       .l-contents
