--- a/src/html/page01.pug
+++ b/src/html/page01.pug
@@ -11,7 +11,7 @@ block contentStatic
     .p-lower-header__in
       h1.p-lower-header__title
         |Page 01
-      p.p-lower-header__excerpt.js-parallax-1
+      p.p-lower-header__excerpt.js-smooth-item
         |it is utility class that manage asynchronous transition on website.
 
   .l-contents__in.l-contents__in--lower
