--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -11,7 +11,7 @@ html(lang="ja")
     .l-page.js-pjax-page(data-page-id=page.id)
       .js-pjax-fixed-before
         block contentFixedBefore
-      .l-contents
+      .l-contents.js-contents
         .js-pjax-contents
           block contentStatic
       .p-contents-overlay.js-pjax-overlay.is-expand
