--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -4,9 +4,7 @@ block vars
   -
     var page = data.pages.index;
 
-block contentFixedBefore
-
-block contentStatic
+block content
   .p-index-header
     .p-index-header__in
       h1.p-index-header__title
@@ -67,6 +65,3 @@ block contentStatic
             |Learn More
           span.c-button-border__line-v
           span.c-button-border__line-h
-
-block contentFixedAfter
-  .p-background-image.p-background-image--00.js-background
