--- a/src/html/page03.pug
+++ b/src/html/page03.pug
@@ -4,9 +4,7 @@ block vars
   -
     var page = data.pages.page03;
 
-block contentFixedBefore
-
-block contentStatic
+block content
   .p-lower-header
     .p-lower-header__in
       h1.p-lower-header__title
@@ -27,6 +25,3 @@ block contentStatic
           |Back to Top
         span.c-button-border__line-v
         span.c-button-border__line-h
-
-block contentFixedAfter
-  .p-background-image.p-background-image--03.js-background
