--- a/src/html/_layout/_head.pug
+++ b/src/html/_layout/_head.pug
@@ -1,6 +1,6 @@
 - 
   var titleMerge = (page.title != '') ? page.title + ' │ ' + data.meta.websiteName : data.meta.websiteName;
-  var keywordsMerge = (page.keywords != '') ? page.keywords + ', ' + data.meta.keywords : data.meta.keywords;
+  var keywordsMerge = data.meta.keywords;
 
 meta(charset="utf-8")
 meta(http-equiv="X-UA-Compatible", content="IE=edge")
@@ -20,9 +20,9 @@ meta(property="og:site_name", content=data.meta.websiteName)
 meta(property="og:type", content="website")
 meta(property="og:description", content=page.description)
 meta(property="og:url", content=data.meta.domain + data.meta.path + page.path)
-meta(property="og:image", content=data.meta.domain + data.meta.path + '/img/common/' + page.ogpImg)
+meta(property="og:image", content=data.meta.domain + data.meta.path + '/img/common/ogp.jpg')
 
 meta(name="twitter:card", content="summary_large_image")
 meta(name="twitter:title", content=titleMerge)
 meta(name="twitter:description", content=page.description)
-meta(name="twitter:image", content=data.meta.domain + data.meta.path + '/img/common/' + page.ogpImg)
+meta(name="twitter:image", content=data.meta.domain + data.meta.path + '/img/common/ogp.jpg')
