--- a/src/html/_layout/_page-with-preload.pug
+++ b/src/html/_layout/_page-with-preload.pug
@@ -9,9 +9,9 @@ html(lang="ja")
       .p-contents-overlay.js-pjax-overlay.is-expand
       .p-progress.js-pjax-progress
         .p-progress__marker
-      .p-dummy-scroll.js-dummy-scroll
+      .l-dummy-scroll.js-dummy-scroll
       .l-contents.js-contents
         .js-pjax-contents
           block content
     block script
-    script(src="/pjax/js/main.js" async)
+    script(src="/pjax/js/main_with_preload.js" async)
