--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -16,6 +16,8 @@ html(lang="ja")
         |Variation
       ul
         li
+          a(href="./basic/") Pjax of basic
+        li
           a(href="./with_preload/") Pjax with preload
       h2
         |Source
