--- a/src/html/with_preload/index.pug
+++ b/src/html/with_preload/index.pug
@@ -12,7 +12,7 @@ block content
       p.p-index-header__excerpt.js-smooth-item
         |it is utility class that manage asynchronous transition on website.
       .p-index-header__btn.js-smooth-item(
-        data-ratio = 0.1
+        data-ratio-y = 0.2
         )
         a.c-button-border.c-button-border--white.js-scroll-item.js-hover(
           href = 'https://github.com/ykob/pjax',
