load a stylesheet ansynchronously.

--- a/src/html/_layout/_head.pug
+++ b/src/html/_layout/_head.pug
@@ -8,12 +8,16 @@ title #{titleMerge}
 meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1")
 meta(name="description", content=page.description)
 meta(name="keywords", content=keywordsMerge)
-meta(name="theme-color", content=data.meta.themeColor)
-meta(name="msapplication-TileImage", content=data.meta.path + "/img/common/ms_tileimage.png")
-meta(name="msapplication-TileColor", content=data.meta.themeColor)
+
+style.
+  .l-page { visibility: hidden; }
+link(rel="preload" as="style" href=data.meta.path + "/css/main.css" onload="this.onload=null;this.rel='stylesheet'")
+
 link(rel="icon" href=data.meta.path + "/img/common/icon.ico")
 link(rel="apple-touch-icon" sizes="180x180" href=data.meta.path + "/img/common/app_icon.png")
-link(rel="stylesheet" href=data.meta.path + "/css/main.css")
+meta(name="msapplication-TileImage", content=data.meta.path + "/img/common/ms_tileimage.png")
+meta(name="msapplication-TileColor", content=data.meta.themeColor)
+meta(name="theme-color", content=data.meta.themeColor)
 
 meta(property="og:title", content=titleMerge)
 meta(property="og:site_name", content=data.meta.websiteName)
