--- a/src/css/layout/_contents.scss
+++ b/src/css/layout/_contents.scss
@@ -1,4 +1,5 @@
 .l-contents {
+  width: 100%;
   line-height: 2;
   overflow: hidden;
   position: relative;
@@ -35,31 +36,15 @@
       margin-top: -50px;
     }
   }
-  @keyframes arriveContents {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes leaveContents {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
-  animation-fill-mode: both;
+  opacity: 0;
   &.is-arrived {
-    animation-name: arriveContents;
-    animation-duration: .4s;
-    animation-delay: .2s;
+    opacity: 1;
+    transition-duration: .6s;
+    transition-property: opacity;
   }
   &.is-leaved {
-    animation-name: leaveContents;
-    animation-duration: .4s;
-    animation-delay: 0s;
+    opacity: 0;
+    transition-duration: .6s;
+    transition-property: opacity;
   }
 }
