added background-color into Inline styles that to apply before loading external CSS.

--- a/src/html/_layout/_head.pug
+++ b/src/html/_layout/_head.pug
@@ -10,6 +10,7 @@ meta(name="description", content=page.description)
 meta(name="keywords", content=keywordsMerge)
 
 style.
+  body { background-color: #000; }
   .l-page { visibility: hidden; }
 link(rel="preload" as="style" href=data.meta.path + "/css/main.css" onload="this.onload=null;this.rel='stylesheet'")
 
