--- a/src/html/_layout/_page.pug
+++ b/src/html/_layout/_page.pug
@@ -7,7 +7,7 @@ html(lang="ja")
   body
     .l-page.js-pjax-page(data-page-id=page.id)
       .l-dummy-scroll.js-dummy-scroll
-      .l-contents.js-contents.js-pjax-contents
+      .l-contents.l-contents--basic.js-contents.js-pjax-contents
         block content
     block script
     script(src="/pjax/js/main.js" async)
