--- a/src/html/_layout/_head.pug
+++ b/src/html/_layout/_head.pug
@@ -5,7 +5,7 @@
 meta(charset="utf-8")
 meta(http-equiv="X-UA-Compatible", content="IE=edge")
 title #{titleMerge}
-meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1")
+meta(name="viewport", content="width=device-width")
 meta(name="description", content=page.description)
 meta(name="keywords", content=keywordsMerge)
 
