--- a/src/css/object/component/_button-border.scss
+++ b/src/css/object/component/_button-border.scss
@@ -4,7 +4,7 @@
   line-height: 1.1;
   position: relative;
   border: 0;
-  color: $color-text-black;
+  color: $color-text;
   @include fontSizeAll(13, 13, 11);
   font-weight: 700;
   text-align: center;
@@ -26,7 +26,7 @@
     display: block;
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
-    background-color: $color-text-black;
+    background-color: $color-text;
   }
   &__label {
     display: inline-block;
@@ -39,7 +39,7 @@
       display: block;
       position: absolute;
       z-index: 10;
-      background-color: $color-text-black;
+      background-color: $color-text;
     }
   }
   &__line-v {
