update a description about this repo on Pug files.

--- a/src/html/basic/index.pug
+++ b/src/html/basic/index.pug
@@ -10,7 +10,7 @@ block content
       h1.p-index-header__title
         |Pjax
       p.p-index-header__excerpt.js-smooth-item
-        |it is utility class that manage asynchronous transition on website.
+        |It's a utility JavaScript asset that manages asynchronous page transition on a website.
       .p-index-header__btn.js-smooth-item(
         data-ratio-y = 0.2
         )
