--- a/src/html/basic/page01.pug
+++ b/src/html/basic/page01.pug
@@ -10,7 +10,7 @@ block content
       h1.p-lower-header__title
         |Page 01
       p.p-lower-header__excerpt.js-smooth-item
-        |it is utility class that manage asynchronous transition on website.
+        |It's a utility JavaScript asset that manages asynchronous page transition on a website.
 
   .l-contents__in.l-contents__in--lower
     .c-section
