--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -11,7 +11,7 @@ html(lang="ja")
       h1
         |Pjax
       p
-        |it is utility class that manage asynchronous transition on website.
+        |It's a utility JavaScript asset that manages asynchronous page transition on a website.
       h2
         |Variation
       ul
