--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -25,3 +25,7 @@ html(lang="ja")
         li
           a(href="https://github.com/ykob/pjax", target = '_blank')
             |https://github.com/ykob/pjax
+      script.
+        const ua = window.navigator.userAgent;
+        const link = document.querySelector('link[as=style]');
+        if (ua.indexOf('Chrome') < 0) link.rel = 'stylesheet';
