--- a/src/html/basic/page01.pug
+++ b/src/html/basic/page01.pug
@@ -4,7 +4,9 @@ block vars
   -
     var page = data.pages.basic.page01;
 
-block content
+block contentFixedBefore
+
+block contentStatic
   .p-lower-header
     .p-lower-header__in
       h1.p-lower-header__title
@@ -25,3 +27,6 @@ block content
           |Back to Top
         span.c-button-border__line-v
         span.c-button-border__line-h
+
+block contentFixedAfter
+  .p-background-image.p-background-image--01
