--- a/src/css/object/project/_index-header.scss
+++ b/src/css/object/project/_index-header.scss
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 10;
   color: #fff;
   text-align: center;
   &__title {
